# egdol

./: .gitignore  QUICKSTART.md  README.md  debug_chat.py  demo_enhanced.py  demo_omnimind.py  demo_synthesis.py  detailed_debug.py  interactive_chat.py  pyproject.toml  pytest.ini  simple_chat.py  test_memory.db
benchmarks/: benchmark_suite.py
demo/: demo_civilization_system.py  demo_civilizational_feedback.py  demo_conversational_personality.py  demo_dsl.py  demo_emergence_control_system.py  demo_experimental_intelligence.py  demo_feedback_loop.py  demo_meta_intelligence.py  demo_network_system.py  demo_next_gen_omnimind.py  demo_omnimind.py  demo_self_creation_system.py  demo_strategic_autonomy.py  demo_transcendence_layer.py
demo_chat_data/: conversation_memory.db
docs/: API.md  DSL_GRAMMAR.md  PROFILE.md  TUTORIAL.md
edgol/: __init__.py  gui.py  interpreter.py  lexer.py  main.py  parser.py  rules_engine.py
egdol/: __init__.py  advanced_constraints.py  advanced_profiler.py  gui.py  interpreter.py  lexer.py  main.py  parallel_executor.py  query_optimizer.py  rules_engine.py  simple_optimizer.py  tkinter.py
omnimind_chat_data/: conversation_memory.db
omnimind_data/: conversation_memory.db
snapshots/: f6d70d38e344f6ff.json  snap_1759549785_88bdaed7.json  snap_1759549789_855c7d77.json  snap_1759549789_aa31f3b2.json  snap_1759549793_0bb1e965.json  snap_1759549793_6e62fe74.json  snap_1759549793_bcdfcb80.json  snap_1759549794_4def1423.json  snap_1759549794_83ab3e8a.json  snap_1759549794_96a6b64b.json  snap_1759549794_b869a9ac.json  snap_1759549808_2daca2f7.json  snap_1759549808_c420a56c.json  snap_1759549812_1312feae.json  snap_1759549812_2724d1ce.json  snap_1759549812_28ee84aa.json  snap_1759549812_59ea2108.json  snap_1759549812_6efbd562.json  snap_1759549812_a23d45df.json  (+52 more)
(+468 files in other folders)
