[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egdol"
version = "0.2.0"
description = "A lightweight Prolog-style rule and fact engine"
readme = "README.md"
authors = [{ name = "Egdol Maintainers" }]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["logic", "prolog", "rule engine", "constraint"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "hypothesis>=6.0",
  "pytest-benchmark>=4.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.0",
  "pytest-mock>=3.0",
  "matplotlib>=3.5",
  "networkx>=2.8",
  "psutil>=5.9"
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = []